2009-07-02 Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* src/progs/mboard-check-minversion.in: Added script to allow users to 
	  check if the installed libmboard meets a minimum version requirement
	  
	* src/utils/avltree.c, include/mb_avltree.h: Added utility to create
	  search and manipulate an AVL binary search tree
	* src/utils/string_map.c, include/mb_string_map.h: Added utility to
	  keep track of unique strings. Used by MB_IndexMap_Create()
	  
	* src/*/indexmap_*: Introduction of the MB_IndexMap_*() routines
	* src/*/filter_*: Introduction of the MB_Filter_*() routines
	* src/*/function_*: Deprecation of the MB_Function_*() rutines
	
	* src/parallel/comm.c: All communication routines are now asynchronous 
	  and non-blocking
	* src/parallel/comm.c: Communication now falls back to full data 
	  replication if message tagging leads to buffers that are larger 
	  than the total board size. Filtering is instead performed by 
	  the recipient
	  
	* include/mb_parallel.h, src/parallel/comm.c, src/parallel/create.c, 
	  src/parallel/clear.c: Fixed critical bug where messages were being 
	  duplicated when board synced multiple times.
	  
	* configure.ac: Added --enable-warnings and --enable-verbose options
	* include/mb_reporting.h: Added macros to print error and warning 
	   messages when --enable-warnings is used during ./configure
	* include/mb_reporting.h: Added macros to print info messages when
	  --enable-verbose is used during ./configure. --enable-verbose also
	  implies --enable-warnings which prints out error and warning messages
	  
	* : Tagged as 0.2.0
	
2009-05-08 Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* m4/acx_pthread.m4, m4/check_parallel.m4: Added support pthreads-win32.
	  Necessary when compiling on Windows using MinGW/MSYS (Cygwin has built-
	  in support for pthreads)
	  
	* Makefile.am: Disable automatic running of test after "make test"
	
	* configure.ac, m4/check_coverage, Makefile.am: Added support for coverage 