@@ -1439,6 +1439,10 @@ int MB_IndexMap_MemberOf(MBt_IndexMap im, int pid, int value);
  * MB_IndexMap_AddEntry()) and before and queries are made (using 
  * MB_IndexMap_MemberOf()).
  * 
+ * \warning This routine calls MPI Routines, and should therefore never be called
+ * when there are any Message Board syncs in progress as this will cause
+ * problems with MPI Libraries that do not support full threading.
+ * 
  * Possible return codes:
  *  - ::MB_SUCCESS
  *  - ::MB_ERR_INVALID (\c im is null or invalid)
